adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias similique praesentium fugiat necessitatibus ratione. Consequuntur sapiente minima natus pariatur, suscipit nemo, nihil impedit aliquam, non consequatur amet culpa? Tenetur, laboriosam.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam illum fugiat alias voluptatum neque odio animi quos iure. Autem, cum explicabo vel illum quod sunt! Harum, eum sapiente? Exercitationem, accusantium.</p>
 </body>
 </html>
